--- a/style.css
+++ b/style.css
@@ -21,14 +21,20 @@ li {
 
 }
 
-
-
 p {
    font-size: 12px;
+   margin: 10px;
 }
 
-#turns-total{
+header {
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+}
 
+#letters {
+    text-transform: uppercase;
+    font-size: 14px;
+    margin: 10px 0px 20px 0px;
 }
 
 #current-guess{
